--- a/index.html
+++ b/index.html
@@ -1788,7 +1788,7 @@ h5{
         <!-- Hero Section -->
         <section class="hero" id="home-section">
             <div class="hero-content">
-                <h1>Bedsheets Collection 2025</h1>
+                <h1>Winter Collection 2025</h1>
                  <p class="static-text">Discover our
 <span id="typing-text"></span>
 </p>
@@ -2115,7 +2115,7 @@ window.addEventListener('DOMContentLoaded', () => {
             </div>
         </div>
 
-        <div class="product-card" data-product="22" data-category="watches">
+        <div class="product-card" data-product="23" data-category="watches">
             <span class="product-badge">-50% Off</span>
          <img src="aura2.webp" class="product-image">
             <div class="product-info">
@@ -2129,7 +2129,7 @@ window.addEventListener('DOMContentLoaded', () => {
             </div>
         </div>
 
-        <div class="product-card" data-product="22" data-category="watches">
+        <div class="product-card" data-product="24" data-category="watches">
             <span class="product-badge">-50% Off</span>
          <img src="aura3.webp" class="product-image">
             <div class="product-info">
@@ -2142,7 +2142,7 @@ window.addEventListener('DOMContentLoaded', () => {
                 </div>
             </div>
         </div>
-        <div class="product-card" data-product="22" data-category="watches">
+        <div class="product-card" data-product="25" data-category="watches">
             <span class="product-badge">-50% Off</span>
          <img src="aura4.jpg" class="product-image">
             <div class="product-info">
@@ -2156,7 +2156,7 @@ window.addEventListener('DOMContentLoaded', () => {
             </div>
         </div>
 
-        <div class="product-card" data-product="22" data-category="watches">
+        <div class="product-card" data-product="26" data-category="watches">
             <span class="product-badge">-50% Off</span>
          <img src="aura5.jpeg" class="product-image">
             <div class="product-info">
@@ -2169,7 +2169,7 @@ window.addEventListener('DOMContentLoaded', () => {
                 </div>
             </div>
         </div>
-        <div class="product-card" data-product="22" data-category="watches">
+        <div class="product-card" data-product="27" data-category="watches">
             <span class="product-badge">-50% Off</span>
          <img src="aura6.jpg" class="product-image">
             <div class="product-info">
@@ -2551,8 +2551,12 @@ document.addEventListener('DOMContentLoaded', function() {
         <h2 class="section-title">OUR JOURNEY</h2>
         <p class="lead-text">Established in 2025, Haseeb Collection set out with a clear vision — to redefine comfort and elegance through premium bedsheets and luxury bedding essentials.</p>
         <div class="details-text">
-          <p>We believe that your bedroom should be a sanctuary of style and relaxation. Every item in our collection is crafted with precision, using high-quality fabrics and refined designs to enhance your living experience.</p>
-          <p>Our promise is to deliver luxurious comfort at a munaasib (reasonable) price — because restful sleep and sophisticated design should be accessible to everyone.</p>
+            <p>At Haseeb Collection, we believe every space and every moment should reflect style and sophistication. Our bedsheets are crafted with high-quality fabrics and elegant designs to make your bedroom a sanctuary of comfort and relaxation.</p>
+
+            <p>Our watches collection brings timeless elegance to your everyday life, combining precision craftsmanship with modern style for a look that stands out.</p>
+            
+            <p>We promise to deliver premium quality at a munaasib (reasonable) price — because luxurious comfort, sophisticated design, and reliable style should be accessible to everyone.</p>
+            
         </div>
         <a href="#products-section" class="shop-now-btn">
           Shop Now <span class="btn-arrow">→</span>
@@ -4300,34 +4304,67 @@ document.addEventListener('DOMContentLoaded', () => {
                 price: "Rs.2,150",
                 description: "Durable cargo pants with multiple utility pockets. Made from a lightweight yet sturdy cotton blend for all-day comfort and mobility. Features reinforced stitching and adjustable waist for a perfect fit.",
                 images: [
-                    "product23.jpg",
-                    "product23.jpg",
-                    "product23.jpg"
+                    "aura2.webp",
+                    "aura2.webp",
+                    "aura2.webp"
                 ],
                  sizes: ["1", "2", "3", "4"]
             },
             24: {
-                title: "Original Ideas 3PCS Double Bed Bedsheet Set – Premium Comfort & Style",
+                title: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain",
                 price: "Rs.2,150",
-                description: "Durable cargo pants with multiple utility pockets. Made from a lightweight yet sturdy cotton blend for all-day comfort and mobility. Features reinforced stitching and adjustable waist for a perfect fit.",
+                description: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain.",
                 images: [
-                    "product12.jpg",
-                    "product12.jpg",
-                    "product12.jpg"
+                    "aura3.webp",
+                    "aura3.webp",
+                    "aura3.webp"
                 ],
                  sizes: ["1", "2", "3", "4"]
             },
             25: {
-                title: "Original Ideas 3PCS Double Bed Bedsheet Set – Premium Comfort & Style",
+                title: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain",
                 price: "Rs.2,150",
-                description: "Durable cargo pants with multiple utility pockets. Made from a lightweight yet sturdy cotton blend for all-day comfort and mobility. Features reinforced stitching and adjustable waist for a perfect fit.",
+                description: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain.",
                 images: [
-                    "product12.jpg",
-                    "product12.jpg",
-                    "product12.jpg"
+                    "aura4.jpg",
+                    "aura4.jpg",
+                    "aura4.jpg"
                 ],
                  sizes: ["1", "2", "3", "4"]
             },
+            26: {
+                title: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain",
+                price: "Rs.2,150",
+                description: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain.",
+                images: [
+                    "aura5.jpeg",
+                    "aura5.jpeg",
+                    "aura5.jpeg"
+                ],
+                 sizes: ["1", "2", "3", "4"]
+            },
+            27: {
+                title: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain",
+                price: "Rs.2,150",
+                description: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain.",
+                images: [
+                    "aura6.jpg",
+                    "aura6.jpg",
+                    "aura6.jpg"
+                ],
+                 sizes: ["1", "2", "3", "4"]
+            },
+            28: {
+                title: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain",
+                price: "Rs.2,150",
+                description: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain.",
+                images: [
+                    "aura4.jpg",
+                    "aura4.jpg",
+                    "aura4.jpg"
+                ],
+                 sizes: ["1", "2", "3", "4"]
+            }
 
         };
 
