--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Haseeb-Collection | Premium Bedsheets, Watches & More</title>
   <link rel="icon" type="image/png" href="logo.png" style="height: 50px;">
 </head>
+    <meta name="google-site-verification" content="87mrhN_u0C7igQOcjuHqiRuH5V9G_fzIiegUv59j_cI" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
