--- a/index.html
+++ b/index.html
@@ -2549,7 +2549,9 @@ document.addEventListener('DOMContentLoaded', function() {
             max-width: 100%;
             margin: 0 auto;
             padding: 0 40px;
-            background: var(--black);
+  background: url('bgr.jpg') no-repeat center center / cover;
+
+
     }
 
         /* Hero Section */
