--- a/index.html
+++ b/index.html
@@ -1505,7 +1505,6 @@ del{
             from { opacity: 0.6; }
             to { opacity: 1; }
         }
-
         .slide.active {
             animation: fadeIn 0.5s ease-in-out;
         }
@@ -1917,7 +1916,7 @@ window.addEventListener('DOMContentLoaded', () => {
     <div class="products-grid">
 
                 <!-- Product 1 -->
-                <div class="product-card" data-product="7">
+                <div class="product-card" data-product="7" data-category="bed sheet">
                     <span class="product-badge">Trending</span>
                     <img src="product7.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
@@ -1930,7 +1929,7 @@ window.addEventListener('DOMContentLoaded', () => {
                         </div>
                     </div>
                 </div>
-                <div class="product-card" data-product="8">
+                <div class="product-card" data-product="8" data-category="bed sheet">
                     <span class="product-badge">Trending</span>
                     <img src="product8.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
@@ -1943,7 +1942,7 @@ window.addEventListener('DOMContentLoaded', () => {
                         </div>
                     </div>
                 </div>
-                <div class="product-card" data-product="9">
+                <div class="product-card" data-product="9" data-category="bed sheet">
                     <span class="product-badge">-50% Off</span>
                     <img src="product9.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
@@ -1956,7 +1955,7 @@ window.addEventListener('DOMContentLoaded', () => {
                         </div>
                     </div>
                 </div>
-                <div class="product-card" data-product="10">
+                <div class="product-card" data-product="10" data-category="bed sheet">
                     <span class="product-badge">-50% Off</span>
                     <img src="product10.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
@@ -1969,7 +1968,7 @@ window.addEventListener('DOMContentLoaded', () => {
                         </div>
                     </div>
                 </div>
-                <div class="product-card" data-product="11">
+                <div class="product-card" data-product="11" data-category="bed sheet">
                     <span class="product-badge">-50% Off</span>
                     <img src="product11.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
@@ -1982,7 +1981,7 @@ window.addEventListener('DOMContentLoaded', () => {
                         </div>
                     </div>
                 </div>
-                <div class="product-card" data-product="12">
+                <div class="product-card" data-product="12" data-category="bed sheet">
                     <span class="product-badge">-50% Off</span>
                     <img src="product12.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
@@ -1995,7 +1994,7 @@ window.addEventListener('DOMContentLoaded', () => {
                         </div>
                     </div>
                 </div>
-                <div class="product-card" data-product="13">
+                <div class="product-card" data-product="13" data-category="bed sheet">
                     <span class="product-badge">-50% Off</span>
                     <img src="product13.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
@@ -2009,7 +2008,7 @@ window.addEventListener('DOMContentLoaded', () => {
                         </div>
                     </div>
                 </div>
-                <div class="product-card" data-product="14">
+                <div class="product-card" data-product="14" data-category="bed sheet">
                     <span class="product-badge">-50% Off</span>
                     <img src="product14.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
@@ -2022,7 +2021,7 @@ window.addEventListener('DOMContentLoaded', () => {
                         </div>
                     </div>
                 </div>
-                <div class="product-card" data-product="15">
+                <div class="product-card" data-product="15" data-category="bed sheet">
                     <span class="product-badge">-50% Off</span>
                     <img src="product15.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
@@ -2036,7 +2035,7 @@ window.addEventListener('DOMContentLoaded', () => {
                     </div>
                 </div>
 
-                <div class="product-card" data-product="16">
+                <div class="product-card" data-product="16" data-category="bed sheet">
                     <span class="product-badge">-50% Off</span>
                     <img src="product16.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
@@ -2049,7 +2048,7 @@ window.addEventListener('DOMContentLoaded', () => {
                         </div>
                     </div>
                 </div>
-                <div class="product-card" data-product="17">
+                <div class="product-card" data-product="17" data-category="bed sheet">
                     <span class="product-badge">-50% Off</span>
                     <img src="product17.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
@@ -2062,7 +2061,7 @@ window.addEventListener('DOMContentLoaded', () => {
                         </div>
                     </div>
                 </div>
-                <div class="product-card" data-product="18">
+                <div class="product-card" data-product="18" data-category="bed sheet">
                     <span class="product-badge">-50% Off</span>
                     <img src="product18.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
@@ -2075,7 +2074,7 @@ window.addEventListener('DOMContentLoaded', () => {
                         </div>
                     </div>
                 </div>
-            <div class="product-card" data-product="19">
+            <div class="product-card" data-product="19" data-category="bed sheet">
                 <span class="product-badge">-50% Off</span>
                 <img src="product19.jpg" alt="Cargo Pants" class="product-image">
                 <div class="product-info">
@@ -2088,7 +2087,7 @@ window.addEventListener('DOMContentLoaded', () => {
                     </div>
                 </div>
             </div>
-            <div class="product-card" data-product="20">
+            <div class="product-card" data-product="20" data-category="bed sheet">
                 <span class="product-badge">-50% Off</span>
                 <img src="product20.jpg" alt="Cargo Pants" class="product-image">
                 <div class="product-info">
@@ -2192,7 +2191,6 @@ window.addEventListener('DOMContentLoaded', () => {
 </section>
 
 <style>
-        .premium-single-showcase
     .discover-more-btn {
     display: block;
     margin: 30px auto;
