--- a/index.html
+++ b/index.html
@@ -2382,7 +2382,7 @@ document.addEventListener('DOMContentLoaded', function() {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('bhaibanner.jpg');
+  background-image: url('white-cement-wall.jpg');
   background-size: cover;
   background-position: center;
   opacity: 0.4; /* 30% transparency */
