Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -4806,7 +4806,7 @@ document.addEventListener('DOMContentLoaded', () => {
             22: {
                 title: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain",
                 price: "Rs.999",
-                description: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain.",
+                description: "Discover the Aura Watch – where elegance meets precision. Crafted with premium materials, it promises durability and timeless style.Its sleek design complements both casual and formal attire effortlessly.Experience unmatched comfort on your wrist with every wear.",
                 images: [
                     "https://www.pakstyle.pk/cdn/shop/files/arabic-aura-watch-18593_1.webp?v=1762859411&width=1100",
                     "https://www.pakstyle.pk/cdn/shop/files/arabic-aura-watch-18593_1.webp?v=1762859411&width=1100",
@@ -4815,9 +4815,9 @@ document.addEventListener('DOMContentLoaded', () => {
                 sizes: ["1", "2", "3", "4"]
             },
             23: {
-                title: "Original Ideas 3PCS Double Bed Bedsheet Set – Premium Comfort & Style",
-                price: "Rs.2,150",
-                description: "Durable cargo pants with multiple utility pockets. Made from a lightweight yet sturdy cotton blend for all-day comfort and mobility. Features reinforced stitching and adjustable waist for a perfect fit.",
+                title: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain",
+                price: "Rs. 950",
+                description: "Discover the Aura Watch – where elegance meets precision. Crafted with premium materials, it promises durability and timeless style.Its sleek design complements both casual and formal attire effortlessly.Experience unmatched comfort on your wrist with every wear.",
                 images: [
                     "aura2.webp",
                     "aura2.webp",
@@ -4827,8 +4827,8 @@ document.addEventListener('DOMContentLoaded', () => {
             },
             24: {
                 title: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain",
-                price: "Rs.2,150",
-                description: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain.",
+                price: "Rs. 950",
+                description: "Discover the Aura Watch – where elegance meets precision. Crafted with premium materials, it promises durability and timeless style.Its sleek design complements both casual and formal attire effortlessly.Experience unmatched comfort on your wrist with every wear.",
                 images: [
                     "aura3.webp",
                     "aura3.webp",
@@ -4838,8 +4838,8 @@ document.addEventListener('DOMContentLoaded', () => {
             },
             25: {
                 title: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain",
-                price: "Rs.2,150",
-                description: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain.",
+                price: "Rs. 950",
+                description: "Discover the Aura Watch – where elegance meets precision. Crafted with premium materials, it promises durability and timeless style.Its sleek design complements both casual and formal attire effortlessly.Experience unmatched comfort on your wrist with every wear.",
                 images: [
                     "aura4.jpg",
                     "aura4.jpg",
@@ -4849,8 +4849,8 @@ document.addEventListener('DOMContentLoaded', () => {
             },
             26: {
                 title: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain",
-                price: "Rs.2,150",
-                description: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain.",
+                price: "Rs. 950",
+                description: "Discover the Aura Watch – where elegance meets precision. Crafted with premium materials, it promises durability and timeless style.Its sleek design complements both casual and formal attire effortlessly.Experience unmatched comfort on your wrist with every wear.",
                 images: [
                     "aura5.jpeg",
                     "aura5.jpeg",
@@ -4860,8 +4860,8 @@ document.addEventListener('DOMContentLoaded', () => {
             },
             27: {
                 title: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain",
-                price: "Rs.2,150",
-                description: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain.",
+                price: "Rs. 950",
+                description: "Discover the Aura Watch – where elegance meets precision. Crafted with premium materials, it promises durability and timeless style.Its sleek design complements both casual and formal attire effortlessly.Experience unmatched comfort on your wrist with every wear.",
                 images: [
                     "aura6.jpg",
                     "aura6.jpg",
@@ -4871,8 +4871,8 @@ document.addEventListener('DOMContentLoaded', () => {
             },
             28: {
                 title: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain",
-                price: "Rs.2,150",
-                description: "Stylish Arabic Aura Watch for Boys Featuring Durable Fiber Chain.",
+                price: "Rs. 950",
+                description: "Discover the Aura Watch – where elegance meets precision. Crafted with premium materials, it promises durability and timeless style.Its sleek design complements both casual and formal attire effortlessly.Experience unmatched comfort on your wrist with every wear.",
                 images: [
                     "aura4.jpg",
                     "aura4.jpg",
