--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
    <head>
         <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Haseeb-Collection | Premium Bedsheets, Watches & More</title>
+  <title>Haseeb Collection – Premium Bedsheets & Watches Online</title>
   <link rel="icon" type="image/png" href="logo.png" style="height: 50px;">
   <meta name="google-site-verification" content="87mrhN_u0C7igQOcjuHqiRuH5V9G_fzIiegUv59j_cI" />
+  <meta name="description" content="Haseeb Collection offers premium bedsheets, watches and stylish home products at affordable prices.">
+  <meta property="og:image" content="https://haseeb-zafar-804.github.io/haseebcollection/logo.png">
+
 </head>   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css">
@@ -1684,9 +1687,9 @@ h5{
 
 .filter-btn:hover,
 .filter-btn.active {
-  background: #222;
+  background: #161616;
   color: #fff;
-  border-color: #222;
+  border-color: #161616;
 }
 /* ✅ Mobile fix */
 @media (max-width: 768px) {
@@ -1876,7 +1879,7 @@ window.addEventListener('DOMContentLoaded', () => {
             <div class="slide">
                 <img src="30193.jpg" alt="Technology">
                 <div class="slide-content">
-                    <h2>Dream in Comfort</h2>
+                    <h2></h2>
                     <p>Wrap yourself in comfort every night with our premium-quality sheets..</p>
                 </div>
             </div>
@@ -2334,7 +2337,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     </div>
                 </div>
         
-                <div class="product-card" data-product="22" data-category="watches">
+                <div class="product-card" data-product="24" data-category="watches">
                     <span class="product-badge">Trending</span>
                  <img src="aura3.webp" class="product-image">
                     <div class="product-info">
