--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <meta name="google-site-verification" content="87mrhN_u0C7igQOcjuHqiRuH5V9G_fzIiegUv59j_cI" />
   <meta name="description" content="Haseeb Collection offers premium bedsheets, watches and stylish home products at affordable prices.">
   <meta property="og:image" content="https://haseeb-zafar-804.github.io/haseebcollection/logo.png">
-
+   <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Haseeb Collection",
+      "url": "https://haseeb-zafar-804.github.io/haseebcollection/",
+      "logo": "https://haseeb-zafar-804.github.io/haseebcollection/logo.jpg"
+    }
+    </script>
 </head>   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.4.2/css/all.css">
